--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@geist-ui/react": "^2.1.3",
+    "inter-ui": "^3.15.1",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
