--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@
 NEXT_PUBLIC_MATATAKI_ENV=testing
 NEXT_PUBLIC_MATATAKI_BACKEND=https://apitest.mttk.net
 NEXT_PUBLIC_MATATAKI_CDN=https://ssimg.frontenduse.top
+NEXT_PUBLIC_MATATAKI_OAUTH_URL=https://developer.matataki.io/app/90ff3e63137a2ff9/oauth?network=test
