--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_MATATAKI_ENV=production
 NEXT_PUBLIC_MATATAKI_BACKEND=https://api.mttk.net/
 NEXT_PUBLIC_MATATAKI_CDN=https://ssimg.frontenduse.top
+NEXT_PUBLIC_MATATAKI_OAUTH_URL=https://developer.matataki.io/app/90ff3e63137a2ff9/oauth
