--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
     "@geist-ui/react": "^2.1.3",
     "@geist-ui/react-icons": "^1.0.1",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "inter-ui": "^3.15.1",
     "next": "10.0.9",
+    "next-images": "^1.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-responsive-carousel": "^3.2.16"
+    "react-responsive-carousel": "^3.2.16",
+    "react-svg": "^12.1.0",
+    "styled-components": "^5.2.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "@types/styled-components": "^5.1.9",
+    "babel-plugin-styled-components": "^1.12.0",
+    "sass": "^1.32.8",
     "typescript": "^4.2.3"
   }
 }
