--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@geist-ui/react": "^2.1.3",
     "@geist-ui/react-icons": "^1.0.1",
+    "@types/moment": "^2.13.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "inter-ui": "^3.15.1",
+    "moment": "^2.29.1",
     "next": "10.0.9",
     "next-images": "^1.7.0",
     "react": "17.0.2",
