--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@geist-ui/react": "^2.1.3",
     "@geist-ui/react-icons": "^1.0.1",
     "@types/moment": "^2.13.0",
+    "@types/react-infinite-scroller": "^1.2.1",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "inter-ui": "^3.15.1",
@@ -19,6 +20,7 @@
     "next-images": "^1.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-infinite-scroller": "^1.2.4",
     "react-responsive-carousel": "^3.2.16",
     "react-svg": "^12.1.0",
     "styled-components": "^5.2.2"
