--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,28 @@
 {
-    "extends": [
-        "plugin:@next/next/recommended",
-        "plugin:react/recommended",
-        "plugin:import/errors",
-        "plugin:import/warnings",
-        "plugin:react-hooks/recommended"
-    ],
-    "parser": "@babel/eslint-parser",
-    "parserOptions": {
-        "requireConfigFile": false,
-        "sourceType": "module",
-        "babelOptions": {
-            "presets": [
-                "next/babel"
-            ]
-        },
-        "ecmaFeatures": {
-            "jsx": true
-        }
+  "extends": [
+    "plugin:@next/next/recommended",
+    "plugin:react/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:react-hooks/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "parser": "@babel/eslint-parser",
+  "parserOptions": {
+    "requireConfigFile": false,
+    "sourceType": "module",
+    "babelOptions": {
+      "presets": ["next/babel"]
     },
-    "settings": {
-        "import/resolver": {
-            "node": {
-                "extensions": [".js", ".jsx", ".ts", ".tsx"]
-            }
-        }
+    "ecmaFeatures": {
+      "jsx": true
     }
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  }
 }
