--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "ethers": "^5.1.0",
     "inter-ui": "^3.15.1",
     "moment": "^2.29.1",
     "next": "10.0.9",
@@ -25,7 +26,8 @@
     "react-redux": "^7.2.3",
     "react-responsive-carousel": "^3.2.16",
     "react-svg": "^12.1.0",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "use-wallet": "^0.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
