--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@geist-ui/react-icons": "^1.0.1",
     "@types/moment": "^2.13.0",
     "@types/react-infinite-scroller": "^1.2.1",
+    "antd": "^4.15.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "inter-ui": "^3.15.1",
