--- a/.env.production
+++ b/.env.production
@@ -3,4 +3,6 @@ NEXT_PUBLIC_MATATAKI_BACKEND=https://api.mttk.net/
 NEXT_PUBLIC_MATATAKI_CDN=https://ssimg.frontenduse.top
 NEXT_PUBLIC_MATATAKI_OAUTH_URL=https://developer.matataki.io/app/ccfa8874f294973f/oauth
 
-NEXT_PUBLIC_SCAN_PREFIX=https://www.etherscan.com
+NEXT_PUBLIC_SCAN_PREFIX=https://testnet.bscscan.com
+# Use this when go to ethereum mainnet
+# NEXT_PUBLIC_SCAN_PREFIX=https://www.etherscan.com
