feat: for walletconnect

--- a/.env.production
+++ b/.env.production
@@ -6,3 +6,6 @@ NEXT_PUBLIC_MATATAKI_OAUTH_URL=https://developer.matataki.io/app/ccfa8874f294973
 NEXT_PUBLIC_SCAN_PREFIX=https://testnet.bscscan.com
 # Use this when go to ethereum mainnet
 # NEXT_PUBLIC_SCAN_PREFIX=https://www.etherscan.com
+
+# TODO: Change this when go mainnet
+NEXT_PUBLIC_USE_WALLET_WC_RPC=https://data-seed-prebsc-2-s2.binance.org:8545
