--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,4 @@ NEXT_PUBLIC_MATATAKI_CDN=https://ssimg.frontenduse.top
 NEXT_PUBLIC_MATATAKI_OAUTH_URL=https://developer.matataki.io/app/90ff3e63137a2ff9/oauth?network=test
 
 NEXT_PUBLIC_SCAN_PREFIX=https://testnet.bscscan.com
+NEXT_PUBLIC_USE_WALLET_WC_RPC=https://bsc-dataseed.binance.org/
