--- a/.env.production
+++ b/.env.production
@@ -4,8 +4,10 @@ NEXT_PUBLIC_MATATAKI_CDN=https://ssimg.frontenduse.top
 NEXT_PUBLIC_MATATAKI_OAUTH_URL=https://developer.matataki.io/app/ccfa8874f294973f/oauth
 
 NEXT_PUBLIC_SCAN_PREFIX=https://testnet.bscscan.com
+
 # Use this when go to ethereum mainnet
 # NEXT_PUBLIC_SCAN_PREFIX=https://www.etherscan.com
+NEXT_PUBLIC_BACKEND_API=https://meta-nft-test.mttk.net
 
 # TODO: Change this when go mainnet
 NEXT_PUBLIC_USE_WALLET_WC_RPC=https://data-seed-prebsc-2-s2.binance.org:8545
