--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@geist-ui/react": "^2.1.3",
     "@geist-ui/react-icons": "^1.0.1",
+    "@reduxjs/toolkit": "^1.5.1",
     "@types/moment": "^2.13.0",
     "@types/react-infinite-scroller": "^1.2.1",
+    "ahooks": "^2.10.0",
     "antd": "^4.15.0",
-    "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "ethers": "^5.1.0",
