--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@geist-ui/react": "^2.1.3",
     "@geist-ui/react-icons": "^1.0.1",
     "@reduxjs/toolkit": "^1.5.1",
+    "@types/js-cookie": "^2.2.6",
     "@types/moment": "^2.13.0",
     "@types/react-infinite-scroller": "^1.2.1",
     "ahooks": "^2.10.0",
@@ -21,6 +22,7 @@
     "classnames": "^2.2.6",
     "ethers": "^5.1.0",
     "inter-ui": "^3.15.1",
+    "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "next": "10.0.9",
     "next-images": "^1.7.0",
