--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "10.0.9",
     "next-images": "^1.7.0",
     "react": "17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.2",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.3",
