--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@geist-ui/react-icons": "^1.0.1",
     "@reduxjs/toolkit": "^1.5.1",
     "@types/js-cookie": "^2.2.6",
+    "@types/lodash": "^4.14.168",
     "@types/moment": "^2.13.0",
     "@types/react-infinite-scroller": "^1.2.1",
     "ahooks": "^2.10.0",
@@ -23,6 +24,7 @@
     "ethers": "^5.1.0",
     "inter-ui": "^3.15.1",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "10.0.9",
     "next-images": "^1.7.0",
