--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^4.15.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "dayjs": "^1.10.4",
     "ethers": "^5.1.0",
     "inter-ui": "^3.15.1",
     "js-cookie": "^2.2.1",
