feat: app name in env

--- a/.env.development
+++ b/.env.development
@@ -8,3 +8,5 @@ NEXT_PUBLIC_MATATAKI_OAUTH_URL=https://developer.matataki.io/app/90ff3e63137a2ff
 NEXT_PUBLIC_BACKEND_API=https://meta-nft-test.mttk.net
 NEXT_PUBLIC_SCAN_PREFIX=https://testnet.bscscan.com
 NEXT_PUBLIC_USE_WALLET_WC_RPC=https://bsc-dataseed.binance.org/
+
+NEXT_PUBLIC_APP_NAME="NFT Development"
