--- a/.env.production
+++ b/.env.production
@@ -11,3 +11,5 @@ NEXT_PUBLIC_BACKEND_API=https://meta-nft-test.mttk.net
 
 # TODO: Change this when go mainnet
 NEXT_PUBLIC_USE_WALLET_WC_RPC=https://data-seed-prebsc-2-s2.binance.org:8545
+
+NEXT_PUBLIC_APP_NAME="Maven NFT"
