--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.2",
     "react-infinite-scroller": "^1.2.4",
+    "react-markdown": "^6.0.1",
     "react-redux": "^7.2.3",
     "react-responsive-carousel": "^3.2.16",
     "react-svg": "^12.1.0",
