--- a/.env.production
+++ b/.env.production
@@ -13,3 +13,4 @@ NEXT_PUBLIC_BACKEND_API=https://meta-nft-test.mttk.net
 NEXT_PUBLIC_USE_WALLET_WC_RPC=https://data-seed-prebsc-2-s2.binance.org:8545
 
 NEXT_PUBLIC_APP_NAME="Maven NFT"
+NEXT_PUBLIC_MANAGEMENT_LOCATION=https://maven-nft-admin.netlify.app
