--- a/.env.development
+++ b/.env.development
@@ -10,3 +10,4 @@ NEXT_PUBLIC_SCAN_PREFIX=https://testnet.bscscan.com
 NEXT_PUBLIC_USE_WALLET_WC_RPC=https://bsc-dataseed.binance.org/
 
 NEXT_PUBLIC_APP_NAME="NFT Development"
+NEXT_PUBLIC_MANAGEMENT_LOCATION=http://localhost:8000
