--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-images": "^1.7.0",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
+    "react-device-detect": "^1.17.0",
     "react-dom": "17.0.2",
     "react-infinite-scroller": "^1.2.4",
     "react-markdown": "^6.0.1",
