--- a/.env.development
+++ b/.env.development
@@ -2,8 +2,9 @@
 # you have to prefix the variable with NEXT_PUBLIC_. For example:
 
 NEXT_PUBLIC_BACKEND_API=https://meta-nft-test.mttk.net
-NEXT_PUBLIC_SCAN_PREFIX=https://testnet.bscscan.com
-NEXT_PUBLIC_USE_WALLET_WC_RPC=https://bsc-dataseed.binance.org/
-
+NEXT_PUBLIC_SCAN_PREFIX=https://rinkeby.etherscan.io
+NEXT_PUBLIC_CHAIN_ID=4
+NEXT_PUBLIC_USE_WALLET_WC_RPC=https://eth-rinkeby.alchemyapi.io/v2/CoKWWzeqfQgXPzVNH_d9ZlxYRpZ_4RIw
+NEXT_PUBLIC_ALCHEMY_APIKEY=CoKWWzeqfQgXPzVNH_d9ZlxYRpZ_4RIw
 NEXT_PUBLIC_APP_NAME="NFT Development"
 NEXT_PUBLIC_MANAGEMENT_LOCATION=http://localhost:8000
