--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,12 @@
-NEXT_PUBLIC_SCAN_PREFIX=https://testnet.bscscan.com
-
 # Use this when go to ethereum mainnet
 # NEXT_PUBLIC_SCAN_PREFIX=https://www.etherscan.com
+NEXT_PUBLIC_SCAN_PREFIX=https://rinkeby.etherscan.io
 NEXT_PUBLIC_BACKEND_API=https://meta-nft-test.mttk.net
+NEXT_PUBLIC_CHAIN_ID=4
 
 # TODO: Change this when go mainnet
-NEXT_PUBLIC_USE_WALLET_WC_RPC=https://data-seed-prebsc-2-s2.binance.org:8545
+NEXT_PUBLIC_USE_WALLET_WC_RPC=https://eth-rinkeby.alchemyapi.io/v2/CoKWWzeqfQgXPzVNH_d9ZlxYRpZ_4RIw
+NEXT_PUBLIC_ALCHEMY_APIKEY=CoKWWzeqfQgXPzVNH_d9ZlxYRpZ_4RIw
 
 NEXT_PUBLIC_APP_NAME="Maven NFT"
 NEXT_PUBLIC_MANAGEMENT_LOCATION=https://maven-nft-admin.netlify.app
