--- a/.env.production
+++ b/.env.production
@@ -10,3 +10,4 @@ NEXT_PUBLIC_ALCHEMY_APIKEY=CoKWWzeqfQgXPzVNH_d9ZlxYRpZ_4RIw
 
 NEXT_PUBLIC_APP_NAME="Maven NFT"
 NEXT_PUBLIC_MANAGEMENT_LOCATION=https://maven-nft-admin.netlify.app
+SITE_URL=https://maven-on-rinkeby-preview.netlify.app
