--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "eslint --fix",
     "prepare": "husky install"
@@ -62,6 +63,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
+    "next-sitemap": "^1.6.57",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
     "typescript": "^4.2.3"
