--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@geist-ui/react": "^2.1.3",
-    "@geist-ui/react-icons": "^1.0.1",
     "@reduxjs/toolkit": "^1.5.1",
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.168",
