--- a/.env.production
+++ b/.env.production
@@ -1,13 +1,9 @@
-# Use this when go to ethereum mainnet
-# NEXT_PUBLIC_SCAN_PREFIX=https://www.etherscan.com
-NEXT_PUBLIC_SCAN_PREFIX=https://rinkeby.etherscan.io
-NEXT_PUBLIC_BACKEND_API=https://meta-nft-test.mttk.net
-NEXT_PUBLIC_CHAIN_ID=4
+NEXT_PUBLIC_SCAN_PREFIX=https://www.bscscan.com
+NEXT_PUBLIC_BACKEND_API=https://mttk-nft-api.mttk.net
+NEXT_PUBLIC_CHAIN_ID=56
 
-# TODO: Change this when go mainnet
-NEXT_PUBLIC_USE_WALLET_WC_RPC=https://eth-rinkeby.alchemyapi.io/v2/Y9V770TvAd3-INdLIYGHAo_MIFo4VBJa
-NEXT_PUBLIC_ALCHEMY_APIKEY=Y9V770TvAd3-INdLIYGHAo_MIFo4VBJa
+NEXT_PUBLIC_USE_WALLET_WC_RPC=https://bsc-dataseed.binance.org/
 
-NEXT_PUBLIC_APP_NAME="Maven NFT"
+NEXT_PUBLIC_APP_NAME="Matataki NFT Market Place"
 NEXT_PUBLIC_MANAGEMENT_LOCATION=https://maven-nft-admin.netlify.app
 SITE_URL=https://maven-on-rinkeby-preview.netlify.app
