--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,9 @@
 # In order to expose a variable to the browser 
 # you have to prefix the variable with NEXT_PUBLIC_. For example:
 
-NEXT_PUBLIC_BACKEND_API=https://meta-nft-test.mttk.net
-NEXT_PUBLIC_SCAN_PREFIX=https://rinkeby.etherscan.io
-NEXT_PUBLIC_CHAIN_ID=4
-NEXT_PUBLIC_USE_WALLET_WC_RPC=https://eth-rinkeby.alchemyapi.io/v2/Y9V770TvAd3-INdLIYGHAo_MIFo4VBJa
-NEXT_PUBLIC_ALCHEMY_APIKEY=Y9V770TvAd3-INdLIYGHAo_MIFo4VBJa
-NEXT_PUBLIC_APP_NAME="NFT Development"
+NEXT_PUBLIC_BACKEND_API=https://mttk-nft-api.mttk.net
+NEXT_PUBLIC_SCAN_PREFIX=https://testnet.bscscan.com
+NEXT_PUBLIC_CHAIN_ID=97
+NEXT_PUBLIC_USE_WALLET_WC_RPC=https://data-seed-prebsc-1-s1.binance.org:8545/
+NEXT_PUBLIC_APP_NAME="(MTTK DEV) NFT Market Place"
 NEXT_PUBLIC_MANAGEMENT_LOCATION=http://localhost:8000
