--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,4 @@ NEXT_PUBLIC_CHAIN_ID=97
 NEXT_PUBLIC_USE_WALLET_WC_RPC=https://data-seed-prebsc-1-s1.binance.org:8545/
 NEXT_PUBLIC_APP_NAME="(MTTK DEV) NFT Market Place"
 NEXT_PUBLIC_MANAGEMENT_LOCATION=http://localhost:8000
+SITE_URL=https://nft-market-testing.mttk.net
