--- a/.env.production
+++ b/.env.production
@@ -6,4 +6,4 @@ NEXT_PUBLIC_USE_WALLET_WC_RPC=https://bsc-dataseed.binance.org/
 
 NEXT_PUBLIC_APP_NAME="Matataki NFT Market Place"
 NEXT_PUBLIC_MANAGEMENT_LOCATION=https://maven-nft-admin.netlify.app
-SITE_URL=https://maven-on-rinkeby-preview.netlify.app
+SITE_URL=https://nft-market.mttk.net
