--- a/.env.production
+++ b/.env.production
@@ -5,5 +5,5 @@ NEXT_PUBLIC_CHAIN_ID=56
 NEXT_PUBLIC_USE_WALLET_WC_RPC=https://bsc-dataseed.binance.org/
 
 NEXT_PUBLIC_APP_NAME="Matataki NFT Market Place"
-NEXT_PUBLIC_MANAGEMENT_LOCATION=https://maven-nft-admin.netlify.app
+NEXT_PUBLIC_MANAGEMENT_LOCATION=http://localhost:8000
 SITE_URL=https://nft-market.mttk.net
