--- a/.env.production
+++ b/.env.production
@@ -5,6 +5,7 @@ NEXT_PUBLIC_CHAIN_ID=97
 NEXT_PUBLIC_USE_WALLET_WC_RPC=https://data-seed-prebsc-1-s1.binance.org:8545/
 NEXT_PUBLIC_APP_NAME="(MTTK DEV) NFT Market Place"
 NEXT_PUBLIC_MANAGEMENT_LOCATION=http://localhost:8000
+NEXT_PUBLIC_MATATAKI_API=https://apitest.mttk.net
 SITE_URL=https://nft-market-test.mttk.net/
 # Use this when go public
 #NEXT_PUBLIC_CHAIN_ID=56
@@ -12,4 +13,5 @@ SITE_URL=https://nft-market-test.mttk.net/
 
 #NEXT_PUBLIC_APP_NAME="Matataki NFT Market Place"
 #NEXT_PUBLIC_MANAGEMENT_LOCATION=http://localhost:8000
+#NEXT_PUBLIC_MATATAKI_API=https://api.mttk.net
 #SITE_URL=https://nft-market.mttk.net
