feat: modify header and api

--- a/.env.production
+++ b/.env.production
@@ -15,3 +15,5 @@ SITE_URL=https://nft-market-test.mttk.net/
 #NEXT_PUBLIC_MANAGEMENT_LOCATION=http://localhost:8000
 #NEXT_PUBLIC_MATATAKI_API=https://api.mttk.net
 #SITE_URL=https://nft-market.mttk.net
+
+NEXT_PUBLIC_SSIMG = https://ssimg.frontenduse.top
