--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-# In order to expose a variable to the browser 
+# In order to expose a variable to the browser
 # you have to prefix the variable with NEXT_PUBLIC_. For example:
 
 NEXT_PUBLIC_BACKEND_API=https://mttk-nft-api.mttk.net
@@ -10,3 +10,5 @@ NEXT_PUBLIC_APP_NAME="(MTTK DEV) NFT Market Place"
 NEXT_PUBLIC_MATATAKI_API=https://apitest.mttk.net
 NEXT_PUBLIC_MANAGEMENT_LOCATION=http://localhost:8000
 SITE_URL=https://nft-market-test.mttk.net/
+
+NEXT_PUBLIC_SSIMG = https://ssimg.frontenduse.top
