feat: show user info

--- a/.env.production
+++ b/.env.production
@@ -17,3 +17,4 @@ SITE_URL=https://nft-market-test.mttk.net/
 #SITE_URL=https://nft-market.mttk.net
 
 NEXT_PUBLIC_SSIMG = https://ssimg.frontenduse.top
+NEXT_PUBLIC_MATATAKI = https://www.matataki.io
