--- a/.env.development
+++ b/.env.development
@@ -12,3 +12,4 @@ NEXT_PUBLIC_MANAGEMENT_LOCATION=http://localhost:8000
 SITE_URL=https://nft-market-test.mttk.net/
 
 NEXT_PUBLIC_SSIMG = https://ssimg.frontenduse.top
+NEXT_PUBLIC_MATATAKI = https://test.matataki.io
